--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.7",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -22,9 +27,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.8",
     "cz-conventional-changelog": "3.3.0",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
